--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "classnames": "^2.3.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "node-sass": "^4.14.1"
   },
   "devDependencies": {
     "eslint": "8.0.1",
