--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootswatch": "^5.1.3",
     "classnames": "^2.3.1",
     "next": "11.1.2",
+    "node-sass": "^4.14.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "node-sass": "^4.14.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.0.1",
